--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -5,8 +5,9 @@
 body #wall .tag-2 {
   display: none;
 }
-div #wall .tag-3 {
+#wall #tag-3.slick, .wicked{
   display: none;
+
 }
 #wall .tag-4 {
   display: none;
