--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -7,11 +7,11 @@ body #wall .tag-2 {
 }
 #wall #tag-3.slick, .wicked{
   display: none;
-
 }
-#wall .tag-4 {
+ #wall .parent #tag-4 { /* 210 */
   display: none;
 }
+
 #wall .tag-5 {
   display: none;
 }
