--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -8,11 +8,11 @@ body #wall .tag-2 {
 #wall #tag-3.slick, .wicked{
   display: none;
 }
- #wall .parent #tag-4 { /* 210 */
+ #wall .parent #tag-4 { 
   display: none;
 }
 
-#wall .tag-5 {
+#wall .parent #tag-5.slick { 
   display: none;
 }
 
