--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -15,7 +15,12 @@ body #wall .tag-2 {
 #wall .parent #tag-5.slick { 
   display: none;
 }
+body #wall div.parent div:last-child #tag-6 { /*225*/
+  display: none;
+}
 
-#wall .tag-6 {
+/* Tag 7 -> 224 */
+
+body #wall div.parent div > #tag-7.slick { /*225*/
   display: none;
 }
